Updating upload notebook and adding VGG16 vec notebook

--- a/dynamodb-upload.ipynb
+++ b/dynamodb-upload.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "dict_keys(['mid', 'stills'])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
        "dict_keys(['title', 'url', 'attrs', 'img-links'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,25 +73,14 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "s3.ServiceResource()"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "s3 = boto3.resource(\"s3\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +89,7 @@
        "dynamodb.Table(name='film-stills')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +198,7 @@
        "  'title': '10 Cloverfield Lane'}}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,26 +209,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import itertools"
+    "import itertools as it"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_all_attrs():\n",
-    "    return set(chain(*(d[\"attrs\"].keys() for d in data)))"
+    "    return set(it.chain(*(d[\"attrs\"].keys() for d in data)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +295,7 @@
        " 'year'}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +335,7 @@
        " 'year'}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -366,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +383,7 @@
        " 'year'}"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -423,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +450,7 @@
        " 'year'}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -492,7 +481,7 @@
        " 'year'}"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -589,7 +578,7 @@
        "  'title': '10 Cloverfield Lane'}}"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -609,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -620,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -711,7 +700,7 @@
        "  'title': '10 Cloverfield Lane'}}"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -722,156 +711,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with table.batch_writer() as batch:\n",
-    "    for d in data:\n",
-    "        batch.put_item(Item=d)"
+    "with open(\"data/s3-data.json\",\"w\") as f:\n",
+    "    json.dump(data,f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2020, 8, 9, 20, 27, 40, 433000, tzinfo=tzlocal())"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "table.creation_date_time"
+    "# with table.batch_writer() as batch:\n",
+    "#     for d in data:\n",
+    "#         batch.put_item(Item=d)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 96,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "table.item_count"
+    "# table.creation_date_time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Item': {'stills': ['processed/0000_10CloverfieldLane_00000.png',\n",
-       "   'processed/0000_10CloverfieldLane_00001.png',\n",
-       "   'processed/0000_10CloverfieldLane_00002.png',\n",
-       "   'processed/0000_10CloverfieldLane_00003.png',\n",
-       "   'processed/0000_10CloverfieldLane_00004.png',\n",
-       "   'processed/0000_10CloverfieldLane_00005.png',\n",
-       "   'processed/0000_10CloverfieldLane_00006.png',\n",
-       "   'processed/0000_10CloverfieldLane_00007.png',\n",
-       "   'processed/0000_10CloverfieldLane_00008.png',\n",
-       "   'processed/0000_10CloverfieldLane_00009.png',\n",
-       "   'processed/0000_10CloverfieldLane_00010.png',\n",
-       "   'processed/0000_10CloverfieldLane_00011.png',\n",
-       "   'processed/0000_10CloverfieldLane_00012.png',\n",
-       "   'processed/0000_10CloverfieldLane_00013.png',\n",
-       "   'processed/0000_10CloverfieldLane_00014.png',\n",
-       "   'processed/0000_10CloverfieldLane_00015.png',\n",
-       "   'processed/0000_10CloverfieldLane_00016.png',\n",
-       "   'processed/0000_10CloverfieldLane_00017.png',\n",
-       "   'processed/0000_10CloverfieldLane_00018.png',\n",
-       "   'processed/0000_10CloverfieldLane_00019.png',\n",
-       "   'processed/0000_10CloverfieldLane_00020.png',\n",
-       "   'processed/0000_10CloverfieldLane_00021.png',\n",
-       "   'processed/0000_10CloverfieldLane_00022.png',\n",
-       "   'processed/0000_10CloverfieldLane_00023.png',\n",
-       "   'processed/0000_10CloverfieldLane_00024.png',\n",
-       "   'processed/0000_10CloverfieldLane_00025.png',\n",
-       "   'processed/0000_10CloverfieldLane_00026.png',\n",
-       "   'processed/0000_10CloverfieldLane_00027.png',\n",
-       "   'processed/0000_10CloverfieldLane_00028.png',\n",
-       "   'processed/0000_10CloverfieldLane_00029.png',\n",
-       "   'processed/0000_10CloverfieldLane_00030.png',\n",
-       "   'processed/0000_10CloverfieldLane_00031.png',\n",
-       "   'processed/0000_10CloverfieldLane_00032.png',\n",
-       "   'processed/0000_10CloverfieldLane_00033.png',\n",
-       "   'processed/0000_10CloverfieldLane_00034.png',\n",
-       "   'processed/0000_10CloverfieldLane_00035.png',\n",
-       "   'processed/0000_10CloverfieldLane_00036.png',\n",
-       "   'processed/0000_10CloverfieldLane_00037.png',\n",
-       "   'processed/0000_10CloverfieldLane_00038.png',\n",
-       "   'processed/0000_10CloverfieldLane_00039.png',\n",
-       "   'processed/0000_10CloverfieldLane_00040.png',\n",
-       "   'processed/0000_10CloverfieldLane_00041.png',\n",
-       "   'processed/0000_10CloverfieldLane_00042.png',\n",
-       "   'processed/0000_10CloverfieldLane_00043.png',\n",
-       "   'processed/0000_10CloverfieldLane_00044.png',\n",
-       "   'processed/0000_10CloverfieldLane_00045.png',\n",
-       "   'processed/0000_10CloverfieldLane_00046.png',\n",
-       "   'processed/0000_10CloverfieldLane_00047.png',\n",
-       "   'processed/0000_10CloverfieldLane_00048.png',\n",
-       "   'processed/0000_10CloverfieldLane_00049.png',\n",
-       "   'processed/0000_10CloverfieldLane_00050.png',\n",
-       "   'processed/0000_10CloverfieldLane_00051.png',\n",
-       "   'processed/0000_10CloverfieldLane_00052.png',\n",
-       "   'processed/0000_10CloverfieldLane_00053.png',\n",
-       "   'processed/0000_10CloverfieldLane_00054.png',\n",
-       "   'processed/0000_10CloverfieldLane_00055.png',\n",
-       "   'processed/0000_10CloverfieldLane_00056.png',\n",
-       "   'processed/0000_10CloverfieldLane_00057.png',\n",
-       "   'processed/0000_10CloverfieldLane_00058.png',\n",
-       "   'processed/0000_10CloverfieldLane_00059.png',\n",
-       "   'processed/0000_10CloverfieldLane_00060.png',\n",
-       "   'processed/0000_10CloverfieldLane_00061.png',\n",
-       "   'processed/0000_10CloverfieldLane_00062.png',\n",
-       "   'processed/0000_10CloverfieldLane_00063.png',\n",
-       "   'processed/0000_10CloverfieldLane_00064.png'],\n",
-       "  'attrs': {'costume design': 'Meagan McLaughlin',\n",
-       "   'production design': 'Ramsey Avery',\n",
-       "   'title': '10 Cloverfield Lane',\n",
-       "   'year': '2016',\n",
-       "   'director': 'Dan Trachtenberg',\n",
-       "   'director of photography': 'Jeff Cutter'},\n",
-       "  'url': 'https://film-grab.com/2017/03/24/10-cloverfield-lane/',\n",
-       "  'mid': '0000',\n",
-       "  'title': '10 Cloverfield Lane'},\n",
-       " 'ResponseMetadata': {'RequestId': '7RS9G60NCK4QAG83J449O93KKVVV4KQNSO5AEMVJF66Q9ASUAAJG',\n",
-       "  'HTTPStatusCode': 200,\n",
-       "  'HTTPHeaders': {'server': 'Server',\n",
-       "   'date': 'Mon, 10 Aug 2020 02:14:03 GMT',\n",
-       "   'content-type': 'application/x-amz-json-1.0',\n",
-       "   'content-length': '3703',\n",
-       "   'connection': 'keep-alive',\n",
-       "   'x-amzn-requestid': '7RS9G60NCK4QAG83J449O93KKVVV4KQNSO5AEMVJF66Q9ASUAAJG',\n",
-       "   'x-amz-crc32': '914502672'},\n",
-       "  'RetryAttempts': 0}}"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "table.get_item(Key={\"mid\":\"0000\"})"
+    "# table.item_count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# table.get_item(Key={\"mid\":\"0000\"})"
    ]
   },
   {
