Adding vgg16 embedding progress

--- a/image-to-vgg16.ipynb
+++ b/image-to-vgg16.ipynb
@@ -366,7 +366,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Images Processed:  24%|████████▎                         | 32305/132617 [2:45:39<8:30:02,  3.28it/s]"
+      "Images Processed:  25%|████████▍                         | 32760/132617 [2:48:00<9:22:24,  2.96it/s]"
      ]
     }
    ],
