Fixing alpha issue. Re-running image->vgg16->PCA

--- a/image-to-vgg16.ipynb
+++ b/image-to-vgg16.ipynb
@@ -113,7 +113,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A `pathlib.Path` object for accessing and reading the image files."
+   ]
   },
   {
    "cell_type": "code",
@@ -137,12 +139,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create a `load_image` function that will: \n",
+    "* take a path object\n",
+    "* open it with PIL\n",
+    "* make it square\n",
+    "* convert it to the range `[0,1]`\n",
+    "* reshuffle the dimensions from `(column,row,channel)` to `(channel,column,row)`\n",
+    "* return the torch tensor object"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_image(mid,sid,path):\n",
+    "def load_image(path):\n",
     "    # Load image into a BytesIO obj\n",
     "    with path.open(\"rb\") as f:\n",
     "        # Load into a PIL Image\n",
@@ -160,7 +175,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Load in the stills data as a DataFrame with `movie-id`, `still-id`, and the `filename` of the still."
+    "Load in the stills data as a DataFrame with `movie-id`, `still-id`, and the `filename` of each still."
    ]
   },
   {
@@ -271,15 +286,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tqdm import tqdm"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -359,14 +365,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tqdm import tqdm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Images Processed:  25%|████████▍                         | 32760/132617 [2:48:00<9:22:24,  2.96it/s]"
+      "Images Processed: 100%|██████████████████████████████████| 132617/132617 [11:19:36<00:00,  3.25it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully processed 132,617 of 132,617 images\n",
+      "Encountered      0 image loading errors\n",
+      "Encountered      0 vgg16 embedding errors\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
@@ -384,7 +415,7 @@
     "for i, (mid, sid, file) in progress_bar:\n",
     "    path = stills_dir / f\"{mid:04d}\" / file\n",
     "    try:\n",
-    "        img = load_image(mid,sid,path)\n",
+    "        img = load_image(path)\n",
     "    except:\n",
     "        load_errors.append((mid,sid,file))\n",
     "        continue\n",
@@ -395,19 +426,12 @@
     "        continue\n",
     "    dset[i] = embedding.detach().numpy().reshape((vgg_output_shape,))\n",
     "    images_processed += 1\n",
+    "    \n",
+    "f.close()\n",
     "\n",
     "print(f\"Successfully processed {images_processed:6,d} of {len(images):6,d} images\")\n",
-    "print(f\"{len(load_errors):6,d} image loading errors\")\n",
-    "print(f\"{len(vgg_errors):6,d} vgg16 embedding errors\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "f.close()"
+    "print(f\"Encountered {len(load_errors):6,d} image loading errors\")\n",
+    "print(f\"Encountered {len(vgg_errors):6,d} vgg16 embedding errors\")"
    ]
   },
   {
