--- a/vgg16-to-pca.ipynb
+++ b/vgg16-to-pca.ipynb
@@ -34,6 +34,7 @@
     "\n",
     "import dask\n",
     "import dask.array as da\n",
+    "from dask_ml.preprocessing import StandardScaler\n",
     "from dask_ml.decomposition import PCA, IncrementalPCA"
    ]
   },
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +56,7 @@
        "(132617, 4096)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,11 +77,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "embeddings = da.from_array(d, chunks=(1000, 1000))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scale the data to $\\mu = 0$ and $\\sigma^2 = 1$ for PCA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scaler = StandardScaler()\n",
+    "scaled_embeddings = scaler.fit_transform(embeddings)"
    ]
   },
   {
@@ -92,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +119,7 @@
        "PCA(n_components=2)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -122,27 +140,27 @@
        "PCA(n_components=2)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pca.fit(embeddings)"
+    "pca.fit(scaled_embeddings)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.07109076, 0.0390475 ])"
+       "array([0.06236175, 0.04348563])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +187,7 @@
        "  <tbody>\n",
        "    <tr><th> Bytes </th><td> 2.12 MB </td> <td> 16.00 kB </td></tr>\n",
        "    <tr><th> Shape </th><td> (132617, 2) </td> <td> (1000, 2) </td></tr>\n",
-       "    <tr><th> Count </th><td> 3971 Tasks </td><td> 133 Chunks </td></tr>\n",
+       "    <tr><th> Count </th><td> 5323 Tasks </td><td> 133 Chunks </td></tr>\n",
        "    <tr><th> Type </th><td> float64 </td><td> numpy.ndarray </td></tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -332,13 +350,13 @@
        "dask.array<sum-aggregate, shape=(132617, 2), dtype=float64, chunksize=(1000, 2), chunktype=numpy.ndarray>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pca_embeddings = pca.transform(embeddings)\n",
+    "pca_embeddings = pca.transform(scaled_embeddings)\n",
     "pca_embeddings"
    ]
   },
@@ -351,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
